@@ -1,3 +1,4 @@
+1.1.3-0 @10/10/2005 16:55:00 UTC@
 1.1.2-0 @06/28/2005 21:15:00 UTC@
 1.1.1-0 @06/09/2005 23:50:00 UTC@
 1.1.0-0 @06/07/2005 03:15:00 UTC@
