@@ -140,7 +140,7 @@ DPP_PROG_LINKER
 # -----------------------------------------------------------------------------
 # Checks for libraries.
 # -----------------------------------------------------------------------------
-jccl_version='0.92.11'
+jccl_version='1.1.3'
 JCCL_PATH_CXX([$jccl_version], [test_tweek_cxx='Y'],
    [AC_MSG_WARN([*** JCCL C++ API required for JCCL C++ plug-ins ***])
     test_tweek_cxx='N'
