@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-10-2005 patrickh    jccl::ConfigManager is no longer responsible for
+                        deleting the memory held its pointre to the remote
+                        run-time reconfiguration interface implementation.
+                        NEW VERSION: 1.1.3
 Jul-11-2005 patrickh    Updated to VPR 1.1.3.
 Jul-10-2005 patrickh    Updated to VPR 1.1.2.
 Jun-28-2005 patrickh    Added jccl::DependencyManager::unregisterChecker().
